# ai-agents

./: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pr.yml
agent-ui/: package.json  pnpm-lock.yaml
apps/adk/: README.md  pyproject.toml
apps/adk/google_search/: agent.py
apps/adk/hello/: agent.py
apps/agno-adventures/: README.md  agent_with_knowledge.py  agent_with_text_to_sql.py  agentic_rag_with_reranking.py  builtin_memory_teams.py  docker-compose.yml  playground.py  playground_azure.py  playground_teams.py  pyproject.toml  sql_agent_init.sql
apps/cli/: README.md  pyproject.toml
apps/cli/src/sumo/cli/: main.py
apps/cli/tests/: test_cli.py
apps/server/: README.md  pyproject.toml
apps/server/src/sumo/server/: main.py
apps/server/tests/: test_server.py
docs/: agno.md  graph-rag.md  uv.md
libs/utils/: README.md  pyproject.toml
libs/utils/src/sumo/utils/: __init__.py  _hello.py  module2.py
libs/utils/tests/: test_utils.py
