[project]
name = "agno-adventures"
version = "0.1.0"
description = "agno adventures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.2.6",
    "duckduckgo-search>=7.5.5",
    "fastapi[standard]>=0.115.12",
    "openai>=1.69.0",
    "sqlalchemy>=2.0.40",
    "yfinance>=0.2.55",
]
