[project]
name = "cli"
version = "0.1.0"
description = "ai cli app"
readme = "README.md"
authors = [
    { name = "Sumanth Chinthagunta", email = "xmlking@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.2",
    "utils",
]


[tool.uv.sources]
utils = { workspace = true }

[project.scripts]
ai_agents_cli = "sumo.cli:app"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sumo"]
