[project]
name = "server"
version = "0.1.0"
description = "My AI Agents server"
readme = "README.md"
authors = [
    { name = "Sumanth Chinthagunta", email = "xmlking@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["utils"]

[tool.uv.sources]
utils = { workspace = true }

[project.scripts]
ai_agents_server = "sumo.server:main"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.12"

[tool.ruff]
extend = "../../pyproject.toml"
exclude = ["build", "dist"]
include = [
    "src/**"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sumo"]

